# council-ai

./: .council_host  .coveragerc  .cursorrules  .env.example  .envn  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  =3.9.0  AGENT_KNOWLEDGE_BASE.md  BUILD_WEB.md  CHANGELOG.md  CLAUDE.md  CODEX_ENV_SETUP.md  CONTRIBUTING.md  COUNCIL_AI_SPECIFICATION.md  COUNCIL_REVIEW_MOBILE.md  DESIGN_AUDIT_REPORT.md  DOCUMENTATION_REVIEW.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  INVESTIGATION_SUMMARY.md  LAZY_LOADING_IMPLEMENTATION.md  LICENSE  LLM_COGNITION_NOTES.md  MEMVID_INTEGRATION_DECISION.md  PERSONA_MODEL_SETTINGS.md  PHASE4_COMPLETION_REPORT.md  PHASE_2_WCAG_AUDIT.md  QUALITY.md  QUICK_START.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY.md  SETUP_VENV.md  (+38 more)
.agent/: COMPLETION_INSTRUCTIONS.md  ISSUE_TO_CREATE.md  PR_SUMMARY.md  README.md  migration-status.md
.agent/workflows/: pre-commit-checklist.md  pre-task.md
.codex/: tasks.json
.devcontainer/: devcontainer.json
.github/workflows/: README.md  codex-validation.yml  trufflehog-secrets-scan.yml
.serena/: project.yml
.workspace-config/council-ai/user_memory/: memory.json
Archive/: COMPREHENSIVE_HARDENING_SUMMARY.md  COUNCIL_AI_MEMORY_PERSONALIZATION_REPORT_2026-01-19.md  DESIGN_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md.archived  TODOS_REPORT.md  VENV_MANAGEMENT.md.archived  WHICH_REPO.md.archived
Archive/legacy-js/: main.js
Archive/legacy-js/core/: utils.js
Archive/legacy-js/lazy/: mobile.js
Archive/legacy-js/ui/: render.js
config/superset/: README.md
config/superset/dashboards/: __init__.py  consultation_analytics_dashboard.json
config/superset/database/: models.py
config/superset/scripts/: __init__.py  export_to_db.py
docs/: INTEGRATION_ASSESSMENT.md  REVIEWER_SETUP.md
documentation/: API_REFERENCE.md  COMMON_TASKS.md  CONFIGURATION.md  CONSOLIDATION_PLAN.md  CONTEXT_INJECTION_GUIDE.md  DOCS_MAINTENANCE.md  DOCUMENTATION_MAINTENANCE.md  DOCUMENTATION_REVISION_PLAN.md  ERROR_HANDLING.md  INTEGRATION_ASSESSMENT.md  PERSONAS_AND_DOMAINS.md  PERSONA_MODEL_SETTINGS.md  QUICK_REFERENCE.md  README.md  REVIEWER_SETUP.md  TROUBLESHOOTING.md  WEB_APP.md  WEB_SEARCH_AND_REASONING.md
documentation/Reports/: DIETER_RAMS_DESIGN_AUDIT_2026-01-27.md
documentation/decisions/: INVESTIGATION_SUMMARY.md
documentation/development/: CODE_REVIEW_SUMMARY.md  COUNCIL_REVIEW_MOBILE.md  GUI_UX_IMPROVEMENTS.md
documentation/internal/: ARCHETYPE_GUIDE.md  CODEX_AUTOMATION.md  CODEX_ENV_SETUP.md  CONFLICT_RESOLUTION_GUIDE.md  GEMINI_NOTES.md  MERGE_INSTRUCTIONS.md
documentation/internal/scripts/: phase3-sono-eval.sh  phase3-sono-platform.sh  phase3-website-sonotheia.sh
documentation/planning/: PHASE3_STATUS_REPORT.md
examples/: README.md  audio_post_consultation.py  context_injection_example.py  quickstart.py  review_repository.py  simple_example.py  usage_examples.py  web_search_reasoning_example.py
k8s/: deployment.yaml  kubeconfig.yaml.example
planning/: integration-plan.md
scripts/: activate-venv.bat  activate-venv.ps1  audit_recent.sh  codex-automation.sh  codex-setup.sh  deploy.sh  ensure-automation.sh  setup-venv.bat  setup-venv.ps1  setup-venv.sh  validate_package.py  verify_personal_integration.py
scripts/dev/: get_recent_files.py
src/council_ai/: __init__.py  cli.py  cli_domain.py  cli_persona.py  cli_personal.py
src/council_ai/cli/: __init__.py  app.py  config.py  config_validation.py  domain.py  error_handling.py  help_system.py  persona.py  personal.py  utils.py
src/council_ai/cli/commands/: __init__.py  consult.py  doctor.py  history.py  init.py  interactive.py  misc.py  qa.py  review.py  session_report.py  tui.py  web.py
src/council_ai/cli/tui/: __init__.py  app.css  app.py  keyboard.py  scrolling.py
src/council_ai/config_manager/: __init__.py
src/council_ai/core/: __init__.py  analysis.py  config.py  cost_tracker.py  council.py  diagnostics.py  exceptions.py  history.py  memory.py  persona.py  personal_integration.py  reasoning.py  retry_utils.py  schemas.py  session.py  session_reports.py  user_memory.py
src/council_ai/core/strategies/: __init__.py  base.py  debate.py  individual.py  pattern_coach.py  sequential.py  synthesis.py  vote.py
src/council_ai/domains/: __init__.py  assessment.yaml
src/council_ai/llm_providers/: __init__.py
src/council_ai/personas/: adr_supervisor.yaml  compliance_auditor.yaml  dempsey.yaml  dialogue_editor.yaml  fraud_examiner.yaml  grove.yaml  holman.yaml  kahneman.yaml  rams.yaml  rerecording_mixer.yaml  signal_analyst.yaml  sound_designer.yaml  taleb.yaml  treasure.yaml
src/council_ai/personas/archetypes/: cognitive_scientist.yaml  quality_advocate.yaml  risk_analyst.yaml  security_specialist.yaml  strategic_leader.yaml
src/council_ai/providers/: __init__.py  resilience.py  tts.py
src/council_ai/tools/: __init__.py  reviewer.py  sono_eval_client.py  web_search.py
src/council_ai/utils/: __init__.py  context.py  paths.py
src/council_ai/webapp/: __init__.py  app.py  index.html  reviewer.py  reviewer_ui.html
tests/: README.md  conftest.py  test_analysis.py  test_cancellation.py  test_cli.py  test_cli_commands_unit.py  test_cli_history_unit.py  test_cli_quickstart.py  test_config_validation.py  test_consultation_workflows.py  test_core.py  test_cost_tracker.py  test_debate_synthesis_return_types.py  test_diagnostics.py  test_domains.py  test_examples.py  test_exceptions.py  test_history_filtering.py  test_launch_council.py  test_launcher_resolve_executable.py  test_memory.py  test_memory_extended.py  test_multi_model_utility.py  test_optional_features.py  test_personal_integration.py  test_personas.py  test_phase3_cli_hardening.py  test_phase4_tui_hardening.py  test_provider_fallback.py  test_providers.py  test_reasoning.py  test_repository_reviewer.py  test_resilience.py  test_retry_utils.py  test_reviewer.py  test_session.py  test_session_deletion.py  test_session_memory.py  test_session_reports.py  test_staging.py  (+9 more)
(+141 files in other folders)
